--- a/source/static/package.json
+++ b/source/static/package.json
@@ -14,6 +14,7 @@
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
+    "bokehjs": "^1.4.0",
     "react-scripts": "^4.0.3",
     "sass": "^1.32.12"
   }
