--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,42 @@
-django==3.2.3
-pandas==1.2.4
-networkx==2.5.1
+asgiref==3.3.4
+backcall==0.2.0
 bokeh==2.3.2
-ipython==7.20.0
-matplotlib==3.4.2
+certifi==2021.5.30
+chardet==4.0.0
 chord==1.0.1
-requests==2.25.1
+colorama==0.4.4
+cycler==0.10.0
+decorator==4.4.2
+Django==3.2.4
 gunicorn==20.1.0
+idna==2.10
+ipython==7.24.1
+ipython-genutils==0.2.0
+jedi==0.18.0
+Jinja2==3.0.1
+kiwisolver==1.3.1
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+matplotlib-inline==0.1.2
+networkx==2.5.1
+numpy==1.20.3
+packaging==20.9
+pandas==1.2.4
+parso==0.8.2
+pickleshare==0.7.5
+Pillow==8.2.0
+prompt-toolkit==3.0.18
+Pygments==2.9.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
+PyYAML==5.4.1
+requests==2.25.1
+six==1.16.0
+sqlparse==0.4.1
+tornado==6.1
+traitlets==5.0.5
+typing-extensions==3.10.0.0
+urllib3==1.26.5
+wcwidth==0.2.5
+whitenoise==5.2.0
