--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,9 @@ requests = "*"
 gunicorn = "*"
 whitenoise = "*"
 pexpect = "*"
+seaborn = "*"
+notebook = "*"
+ipywidgets = "*"
 
 [dev-packages]
 
