--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,126 @@
+argon2-cffi==20.1.0
 asgiref==3.3.4
+async-generator==1.10
+attrs==21.2.0
+autobahn==21.3.1
+Automat==20.2.0
 backcall==0.2.0
+bleach==3.3.0
 bokeh==2.3.2
 certifi==2021.5.30
+cffi==1.14.5
+channels==3.0.3
 chardet==4.0.0
-chord==1.0.1
+chord==1.0.2
+click==8.0.1
+cloudpickle==1.6.0
 colorama==0.4.4
+colorcet==2.0.6
+constantly==15.1.0
+cryptography==3.4.7
 cycler==0.10.0
+daphne==3.0.2
+dask==2021.6.0
+datashader==0.13.0
+datashape==0.5.2
 decorator==4.4.2
+defusedxml==0.7.1
+distributed==2021.6.0
 Django==3.2.4
+entrypoints==0.3
+fsspec==2021.6.0
 gunicorn==20.1.0
+HeapDict==1.0.1
+holoviews==1.14.4
+hyperlink==21.0.0
 idna==2.10
+imageio==2.9.0
+incremental==21.3.0
+ipykernel==5.5.5
 ipython==7.24.1
 ipython-genutils==0.2.0
+ipywidgets==7.6.3
 jedi==0.18.0
 Jinja2==3.0.1
+jsonschema==3.2.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
+llvmlite==0.36.0
+locket==0.2.1
+Markdown==3.3.4
 MarkupSafe==2.0.1
 matplotlib==3.4.2
 matplotlib-inline==0.1.2
+mistune==0.8.4
+msgpack==1.0.2
+multipledispatch==0.6.0
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
 networkx==2.5.1
+notebook==6.4.0
+numba==0.53.1
 numpy==1.20.3
 packaging==20.9
 pandas==1.2.4
+pandocfilters==1.4.3
+panel==0.11.3
+param==1.10.1
 parso==0.8.2
+partd==1.2.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.2.0
-prompt-toolkit==3.0.18
+prometheus-client==0.11.0
+prompt-toolkit==3.0.19
+psutil==5.8.0
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyct==0.4.8
 Pygments==2.9.0
+pyOpenSSL==20.0.1
 pyparsing==2.4.7
+pyrsistent==0.17.3
 python-dateutil==2.8.1
 pytz==2021.1
+pyviz-comms==2.0.2
+PyWavelets==1.1.1
+pywin32==301
+pywinpty==0.5.7
 PyYAML==5.4.1
+pyzmq==22.1.0
 requests==2.25.1
+scikit-image==0.18.1
+scipy==1.7.0
+seaborn==0.11.1
+Send2Trash==1.7.1
+service-identity==21.1.0
 six==1.16.0
+sortedcontainers==2.4.0
 sqlparse==0.4.1
+tblib==1.7.0
+terminado==0.9.5
+testpath==0.5.0
+tifffile==2021.6.6
+toolz==0.11.1
 tornado==6.1
+tqdm==4.61.1
 traitlets==5.0.5
+Twisted==21.2.0
+twisted-iocpsupport==1.0.1
+txaio==21.2.1
 typing-extensions==3.10.0.0
 urllib3==1.26.5
 wcwidth==0.2.5
+webencodings==0.5.1
 whitenoise==5.2.0
+widgetsnbextension==3.5.1
+xarray==0.18.2
+zict==2.0.0
+zope.interface==5.4.0
